Renamed a few variables and added documentation

--- a/app/views/ms_converters/index.html.erb
+++ b/app/views/ms_converters/index.html.erb
@@ -20,7 +20,7 @@
   </thread>
 
   <tbody>
-    <% @ms_converters.each do |ms_converter| %>
+    <% @converter_ms_all.each do |ms_converter| %>
 
       <tr>
         <td><%= link_to ms_converter.name, name_path(ms_converter) %></td>
