--- a/app/views/ms_converters/show.html.erb
+++ b/app/views/ms_converters/show.html.erb
@@ -1,10 +1,10 @@
 <%= link_to "Back to Index", ms_converters_path %>
 
-<% if !@ms_converter.errors.empty? %>
+<% if !@converter_ms.errors.empty? %>
   <div class = "alert alert-error">
 
     <ul>
-      <% @ms_converter.errors.full_messages.each do |msg| %>
+      <% @converter_ms.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
     </ul>
@@ -14,12 +14,12 @@
 
 <div class="Show">
   <table>
-    <% file = @ms_converter.attachment.read %>
+    <% file = @converter_ms.attachment.read %>
     <% #file = file.chars %>
     <tr><td></br></td></tr>
     <tr>
       <td style="font-size:120%"><strong>Name</strong></td>
-      <td><%= @ms_converter.name %></td>
+      <td><%= @converter_ms.name %></td>
     </tr>
     <tr><td></br></td></tr>
     <tr>
